GS-12504 ESP Redesign: Front end on time picker and date picker - Fixed radio button and the label alignment on page #3.

--- a/src/webapp/res/css/09_spacing/spacing.css
+++ b/src/webapp/res/css/09_spacing/spacing.css
@@ -262,6 +262,10 @@ General comments:
     border-left: 1px solid #999;
 }
 
+.mrgtop_neg1 {
+    margin-top: -1px;
+}
+
 .mrgtop_2 {
     margin-top: 2px;
 }
